--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "serve": "^11.3.2"
   },
   "scripts": {
